--- a/CMDb/Base.lproj/Main.storyboard
+++ b/CMDb/Base.lproj/Main.storyboard
@@ -213,7 +213,7 @@
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEj-BB-7sc">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEj-BB-7sc" userLabel="Image Wrapper">
                                 <rect key="frame" x="0.0" y="64" width="320" height="180"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ret-X9-GPF">
@@ -229,7 +229,7 @@
                                     <constraint firstAttribute="width" secondItem="LEj-BB-7sc" secondAttribute="height" multiplier="16:9" id="vDx-pc-MnP"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l94-Gf-vp2">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l94-Gf-vp2" userLabel="Title Wrapper">
                                 <rect key="frame" x="0.0" y="244" width="320" height="62.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.65000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="II6-l6-ZM0">
