Changed Header's bg color to match other sections

--- a/CMDb/Base.lproj/MovieDetails.storyboard
+++ b/CMDb/Base.lproj/MovieDetails.storyboard
@@ -20,11 +20,11 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TYp-I9-rX0">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TYp-I9-rX0">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                                 </imageView>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="TYp-I9-rX0" secondAttribute="trailing" id="A1J-bt-G5u"/>
                                 <constraint firstItem="TYp-I9-rX0" firstAttribute="top" secondItem="yUq-lH-UX1" secondAttribute="top" id="bFN-JE-Mon"/>
