--- a/CMDb/Base.lproj/Main.storyboard
+++ b/CMDb/Base.lproj/Main.storyboard
@@ -128,13 +128,13 @@
                                                     <blurEffect style="light"/>
                                                 </visualEffectView>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33G-L7-4gm">
-                                                    <rect key="frame" x="15" y="8" width="290" height="30"/>
+                                                    <rect key="frame" x="15" y="8" width="290" height="13"/>
                                                     <state key="normal" title="Section &gt;">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RDh-Ja-bGX" customClass="iCarousel">
-                                                    <rect key="frame" x="15" y="46" width="290" height="163"/>
+                                                    <rect key="frame" x="0.0" y="29" width="320" height="180"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="RDh-Ja-bGX" secondAttribute="height" multiplier="16:9" id="apF-cj-vtV"/>
@@ -147,14 +147,14 @@
                                                 <constraint firstItem="v0y-NM-dxj" firstAttribute="top" secondItem="mW9-ws-V2M" secondAttribute="top" id="E7u-gA-aJy"/>
                                                 <constraint firstItem="1Ie-ni-CB9" firstAttribute="top" secondItem="v0y-NM-dxj" secondAttribute="top" id="F5p-M3-CEu"/>
                                                 <constraint firstAttribute="bottom" secondItem="v0y-NM-dxj" secondAttribute="bottom" id="Fz0-v3-rbT"/>
-                                                <constraint firstItem="RDh-Ja-bGX" firstAttribute="leading" secondItem="33G-L7-4gm" secondAttribute="leading" id="GVG-Ci-1d5"/>
+                                                <constraint firstItem="RDh-Ja-bGX" firstAttribute="leading" secondItem="mW9-ws-V2M" secondAttribute="leading" id="K7f-ZI-m4H"/>
+                                                <constraint firstAttribute="trailing" secondItem="RDh-Ja-bGX" secondAttribute="trailing" id="PjH-Mh-HrK"/>
                                                 <constraint firstAttribute="trailing" secondItem="33G-L7-4gm" secondAttribute="trailing" constant="15" id="g39-82-Q3S"/>
                                                 <constraint firstItem="1Ie-ni-CB9" firstAttribute="trailing" secondItem="v0y-NM-dxj" secondAttribute="trailing" id="mtU-sj-GOc"/>
                                                 <constraint firstAttribute="bottom" secondItem="RDh-Ja-bGX" secondAttribute="bottom" constant="15" id="njM-fF-cHc"/>
                                                 <constraint firstItem="1Ie-ni-CB9" firstAttribute="bottom" secondItem="v0y-NM-dxj" secondAttribute="bottom" id="oDL-UY-QR5"/>
                                                 <constraint firstItem="1Ie-ni-CB9" firstAttribute="leading" secondItem="v0y-NM-dxj" secondAttribute="leading" id="q3f-ss-bLP"/>
                                                 <constraint firstItem="RDh-Ja-bGX" firstAttribute="top" secondItem="33G-L7-4gm" secondAttribute="bottom" constant="8" symbolic="YES" id="quO-bw-KIs"/>
-                                                <constraint firstItem="RDh-Ja-bGX" firstAttribute="trailing" secondItem="33G-L7-4gm" secondAttribute="trailing" id="sTN-hu-Wii"/>
                                                 <constraint firstAttribute="trailing" secondItem="v0y-NM-dxj" secondAttribute="trailing" id="yT1-nR-Hrs"/>
                                                 <constraint firstItem="33G-L7-4gm" firstAttribute="leading" secondItem="mW9-ws-V2M" secondAttribute="leading" constant="15" id="ycy-Ug-2NN"/>
                                                 <constraint firstItem="v0y-NM-dxj" firstAttribute="leading" secondItem="mW9-ws-V2M" secondAttribute="leading" id="yr3-1R-74a"/>
